--- a/index.html
+++ b/index.html
@@ -4,33 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Nagariya's Profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             background-color: #f4f4f4;
         }
         header {
-            background: #333;
+            background: #007BFF;
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
         }
+        header h1 {
+            margin: 0;
+        }
+        header p {
+            font-size: 1.2em;
+        }
         section {
-            margin: 20px 0;
+            margin: 20px auto;
             background: #fff;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
         }
         h2 {
-            border-bottom: 2px solid #333;
+            border-bottom: 2px solid #007BFF;
             padding-bottom: 5px;
+            margin-top: 0;
         }
         ul {
             list-style-type: none;
             padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background: #333;
+            color: #fff;
+        }
+        footer a {
+            color: #fff;
         }
     </style>
 </head>
@@ -50,12 +78,12 @@
     <h2>Skills</h2>
     <h3>Technical Skills</h3>
     <ul>
-        <li>Operating Systems: Linux (Kali, Parrot), Mac OS</li>
-        <li>Networking: IP addressing, Subnetting, TCP/IP, OSI Model</li>
-        <li>Security Tools: Nmap, Wireshark, TCPDump</li>
-        <li>Protocols: DHCP, DNS, HTTP/HTTPS, SSL/TLS</li>
-        <li>Development: Python, SQL, JavaScript, HTML/CSS, MERN-Stack, Flutter, GitHub</li>
-        <li>Cybersecurity Fundamentals: Cyber Kill Chain, Network Scanning, Port Scanning</li>
+        <li><strong>Operating Systems:</strong> Linux (Kali, Parrot), Mac OS</li>
+        <li><strong>Networking:</strong> IP addressing, Subnetting, TCP/IP, OSI Model</li>
+        <li><strong>Security Tools:</strong> Nmap, Wireshark, TCPDump</li>
+        <li><strong>Protocols:</strong> DHCP, DNS, HTTP/HTTPS, SSL/TLS</li>
+        <li><strong>Development:</strong> Python, SQL, JavaScript, HTML/CSS, MERN-Stack, Flutter, GitHub</li>
+        <li><strong>Cybersecurity Fundamentals:</strong> Cyber Kill Chain, Network Scanning, Port Scanning</li>
     </ul>
     <h3>Professional Skills</h3>
     <ul>
@@ -102,6 +130,11 @@
     <p><strong>Steganography using Python</strong> (November 2023)<br>
     Integrated <strong>AES-256 encryption</strong> to securely embed messages within images using <strong>Python</strong>, ensuring the integrity of sensitive data. Applied <strong>PBKDF2</strong> with <strong>SHA-256</strong> to strengthen encryption and utilized <strong>PyQt5</strong> for GUI design, creating a user-friendly tool.</p>
 </section>
+
+<footer>
+    <p>Connect with me on <a href="https://www.linkedin.com/in/aditya-nagariya-veni-vidi-vici" target="_blank">LinkedIn</a> | <a href="https://github.com/Aditya-Nagariya" target="_blank">GitHub</a></p>
+    <p>&copy; 2024 Aditya Nagariya</p>
+</footer>
 
 </body>
 </html>
