--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <section id="contact">
     <h2>Contact Me</h2>
     <p>If you'd like to connect or learn more about my work, feel free to reach out!</p>
-    <p>Email: <a href="mailto:your-email@example.com">adityanagariyav@examplegmail.com</a></p>
+    <p>Email: <a href="mailto:your-email@example.com">adityanagariyav@gmail.com</a></p>
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/aditya-nagariya-veni-vidi-vici" target="_blank" class="fab fa-linkedin"></a>
         <a href="https://github.com/Aditya-Nagariya" target="_blank" class="fab fa-github"></a>
